# ODP-model

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: player_stages_4k.csv
data/annotations/: player_feel_pairs.csv
notebooks/: colab_train.ipynb
reports/: pilot_top100_experiment_log.md  player_feel_v1.md
src/mania_difficulty/: __init__.py  error_analysis.py  evaluate.py  git_metadata.py  human_judgments.py  labels.py  metrics.py  player_feel_annotations.py  player_stages.py  predict.py  train.py  visualize.py
src/mania_difficulty/data/: __init__.py  dataset.py  fetch_maps.py  fetch_osu_files.py  (+3 more)
tests/: test_attention_map.py  test_audit_dataset.py  test_build_dashboard.py  test_checkpoint_backup.py  test_colab_notebook.py  test_compare_runs.py  test_enrich_osu_metadata.py  test_error_slices.py  test_fetch_data_sources.py  test_group_splits.py  test_human_judgments.py  test_human_review.py  test_labels.py  test_loader_options.py  test_make_synthetic_dataset.py  test_metadata_baseline.py  test_metrics.py  test_model_config.py  test_package_artifacts.py  test_parse_notes.py  test_player_feel_annotations.py  test_player_feel_curve.py  test_player_feel_labeler.py  test_player_feel_pair_generation.py  test_player_stages.py  test_prediction_error_plot.py  test_prediction_rankings.py  test_prediction_summary.py  test_project_embeddings.py  test_run_report.py  test_sample_weights.py  test_sweep_forest.py  test_sweep_neural.py  test_sweep_selection.py  test_tabular_features.py  test_train_feel_ranker.py  test_training_history.py  test_transformer_model.py
(+21 files in other folders)
